<resources>
    <string name="app_name" translatable="false">upClubApp</string>
    <string name="item_profile">Profile</string>
    <string name="item_chats">Chats</string>
    <string name="item_market">Market</string>
    <string name="hint_input_text">Input text...</string>
    <string name="login_button">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="create_account"><a>Create account</a></string>
    <string name="patient">Patient</string>
    <string name="volunteer">Volunteer</string>
    <string name="organization">Organization</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_address">Address</string>
    <string name="label_add">Add</string>
</resources>
