<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.AddNewEventActivity"
    android:padding="25dp">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_edit_text_border"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
        android:padding="10dp"
        tools:ignore="Autofill"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_edit_text_border"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:padding="10dp"
        tools:ignore="Autofill"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_edit_text_border"
        android:hint="@string/hint_address"
        android:inputType="text"
        android:padding="10dp"
        tools:ignore="Autofill"
        android:layout_marginBottom="10dp"/>

    <Spinner
        android:id="@+id/spinnerSkills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_add"
            android:textColor="@android:color/white"
            android:background="@drawable/sp_background_button"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


</LinearLayout>